--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "library-sp21"]
 	path = library-sp21
 	url = https://github.com/Berkeley-CS61B/library-sp21
+[submodule "library-fa20"]
+	path = library-fa20
+	url = https://github.com/Berkeley-CS61B/library-fa20
